--- a/paquescolar-web/src/main/webapp/app/reg07DatosDocPagoCe.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07DatosDocPagoCe.xhtml
@@ -31,7 +31,7 @@
                         <p:inputMask value="#{pagoProveedoresController.numeroRequerimiento}" mask="P99-999999-99" rendered="#{pagoProveedoresController.usuarioAdministrador}"/>
                         <h:outputText value="#{bundle['ce.codEnt']}:"/>
                         <h:panelGrid columns="3">
-                            <p:inputText value="#{pagoProveedoresController.codigoEntidad}" maxlength="5" size="6" onkeypress="disableEnter();" onkeyup="queryEntidad(this.value);"/>
+                            <p:inputText value="#{pagoProveedoresController.codigoEntidad}" maxlength="5" size="6" onkeyup="queryEntidad(this.value);" onkeypress="return event.keyCode !== 13;"/>
                             <p:spacer width="10"/>
                             <p:outputLabel id="nombreCE" value="#{pagoProveedoresController.entidadEducativa.nombre}" style="font-weight: bold"/>
                         </h:panelGrid>
