--- a/paquescolar-web/src/main/webapp/app/rpt07Reintegro.xhtml
+++ b/paquescolar-web/src/main/webapp/app/rpt07Reintegro.xhtml
@@ -55,31 +55,20 @@
                     <h:panelGrid id="pnlDatos">
                         <p:dataTable id="tblDatos" value="#{pagoProveedoresController.lstEmailProveeCredito}" var="reg">
 
-                            <f:facet name="header">
-                                <p:spacer width="10" height="8"/>
-                                <h:commandLink style="float:right;">
-                                    <i class="fa fa-download"></i>
-                                    <p:spacer width="10" height="8"/>
-                                    <h:outputText value="Exportar"/>
-                                    <p:dataExporter  type="xls" encoding="ISO-8859-1" target="tblDatos" 
-                                                     fileName="rptPagoProve_#{catalogosGeneralesController.formatoFechaReporte}" 
-                                                     postProcessor="#{pagoProveedoresController.rptPagoProveedores}"/>
-                                </h:commandLink>
-                            </f:facet>
-
                             <p:columnGroup type="header">
                                 <p:row>
-                                    <p:column rowspan="2" headerText="Cod. Entidad" width="48"/>
-                                    <p:column rowspan="2" headerText="Nombre C.E." />
-                                    <p:column rowspan="2" headerText="Rubro" width="80"/>
-                                    <p:column rowspan="2" headerText="N.I.T." width="110"/>
-                                    <p:column rowspan="2" headerText="Razon Social" />
-                                    <p:column colspan="2" headerText="Documento de pago" width="160"/>
-                                    <p:column rowspan="2" headerText="Monto" width="80"/>
+                                    <p:column rowspan="2" headerText="Cod. Entidad" width="30"/>
+                                    <p:column rowspan="2" headerText="Nombre C.E." width="120"/>
+                                    <p:column rowspan="2" headerText="Rubro" width="55"/>
+                                    <p:column rowspan="2" headerText="N.I.T." width="75"/>
+                                    <p:column rowspan="2" headerText="Razon Social" width="120"/>
+                                    <p:column colspan="3" headerText="Documento de pago" width="210"/>
+                                    <p:column rowspan="2" headerText="Monto" width="68"/>
                                 </p:row>
                                 <p:row>
-                                    <p:column headerText="Número" width="80"/>
-                                    <p:column headerText="Fecha" width="80"/>
+                                    <p:column headerText="Número"/>
+                                    <p:column headerText="Fecha"/>
+                                    <p:column headerText="Cheque o abono a cuenta"/>
                                 </p:row>
                             </p:columnGroup>
 
@@ -89,10 +78,10 @@
                             <p:column headerText="Nombre C.E." style="font-size: 10px;">
                                 <p:outputLabel value="#{reg.nombreCe}"/>
                             </p:column>
-                            <p:column headerText="Rubro">
+                            <p:column headerText="Rubro" style="font-size: 10px;">
                                 <p:outputLabel value="#{reg.descripcionRubro}"/>
                             </p:column>
-                            <p:column headerText="N.I.T.">
+                            <p:column headerText="N.I.T." style="font-size: 10px;">
                                 <p:outputLabel value="#{reg.numeroNitEmp}"/>
                             </p:column>
                             <p:column headerText="Razon Social" style="font-size: 10px;">
@@ -106,7 +95,12 @@
                                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                                 </p:outputLabel>
                             </p:column>
-                            <p:column headerText="Monto ($)" style="text-align: right;">
+                            <p:column headerText="No Cheque o Abono a Cuenta" style="text-align: center;" >
+                                <p:outputLabel value="#{reg.numCheque}">
+                                    <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                </p:outputLabel>
+                            </p:column>
+                            <p:column headerText="Monto ($)" style="text-align: right;font-size: 10px;">
                                 <p:outputLabel value="#{reg.montoActual}">
                                     <f:convertNumber pattern="$ #,##0.00"/>
                                 </p:outputLabel>
