--- a/paquescolar-web/src/main/webapp/app/reg07PlanillaPagoLst.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07PlanillaPagoLst.xhtml
@@ -242,7 +242,7 @@
 
             <f:facet name="footer">
                 <h:panelGrid columns="2">
-                    <p:commandButton value="Aceptar" icon="fa fa-check-circle" action="#{planillaPagoLstMB.crearPlanillaDePago}" update="pnlFiltro pnlDatos"/>
+                    <p:commandButton value="Aceptar" icon="fa fa-check-circle" action="#{planillaPagoLstMB.cerrarDlgEntFinanciera}" update="pnlFiltro pnlDatos"/>
                     <p:commandButton value="Cancelar" icon="fa fa-times-circle" onclick="PF('dlgEntidadesFinancieras').hide();"/>
                 </h:panelGrid>
             </f:facet>
