--- a/paquescolar-web/src/main/webapp/app/reg02DetalleOferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02DetalleOferta.xhtml
@@ -136,12 +136,14 @@
                             </p:column>
 
                             <p:column headerText="Borrar" width="30" style="text-align: center;">
-                                <p:commandLink  action="#{participantesController.eliminarDetalle(false)}" update="tblDetalleOferta" disabled="#{participantesController.modifDesac}">
+                                <p:commandLink id="lnk"  action="#{participantesController.eliminarDetalle(false)}" update="tblDetalleOferta" disabled="#{participantesController.modifDesac}">
                                     <p:outputLabel rendered="#{!detalle.eliminar}"> <i class="fa fa-check-circle"></i></p:outputLabel>
                                     <p:outputLabel rendered="#{detalle.eliminar}"> <i class="fa fa-minus-circle"></i></p:outputLabel>
                                     <f:setPropertyActionListener value="#{detalle}" target="#{participantesController.detalleSeleccionado}"/>  
                                     <f:setPropertyActionListener value="#{rowId}" target="#{participantesController.rowEdit}"/>  
                                 </p:commandLink>
+                                
+                                <p:blockUI block="tblDetalleOferta" trigger="lnk" />
                             </p:column>
 
                             <p:summaryRow>
