--- a/paquescolar-web/src/main/webapp/app/reg02Contrato.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Contrato.xhtml
@@ -33,8 +33,8 @@
                         </h3>
 
                         <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10"
-                                 style="width: 100%; border:0px none; background-color:transparent;"
-                                 styleClass="form-group ui-panelgrid-blank">
+                                     style="width: 100%; border:0px none; background-color:transparent;"
+                                     styleClass="form-group ui-panelgrid-blank">
                             <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />
                             <p:selectOneMenu id="cboRubro" value="#{contratosOrdenesComprasController.rubro}" onkeydown="setaFoco(this);" disabled="#{contratosOrdenesComprasController.deshabilitado}">
                                 <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />  
@@ -66,15 +66,15 @@
 
                         <p:panelGrid columns="1" style="margin-bottom:10px" layout="grid" styleClass="form-group ui-panelgrid-blank">
                             <p:panelGrid columns="6" columnClasses="col2_label,col2,col2_label,col2,col2_label,col2"
-                                 style="width: 100%; border:0px none; background-color:transparent;"
-                                 styleClass="form-group ui-panelgrid-blank">
+                                         style="width: 100%; border:0px none; background-color:transparent;"
+                                         styleClass="form-group ui-panelgrid-blank">
                                 <p:outputLabel value="Id Contrato: " />
                                 <p:inputText id="txtIdContrato" disabled="true" size="6" value="#{contratosOrdenesComprasController.selected.idContrato}"/>
                                 <p:outputLabel value="Num. Contrato: " for="txtNumContrato"  />
                                 <p:inputText id="txtNumContrato" disabled="true" size="10" value="#{contratosOrdenesComprasController.selected.numeroContrato}"/>
                                 <p:outputLabel value="Año:" for="txtAnyo"/>
                                 <p:inputText id="txtAnyo" size="6" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.anhoContrato}"/>
-                                
+
                                 <p:outputLabel value="Fecha Contrato: " for="cldFechaContrato" />
                                 <p:calendar id="cldFechaContrato" pattern="dd/MM/yyyy" size="12" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.fechaEmision}" locale="es"/>
                                 <p:outputLabel value="Fecha Orden Inicio: " for="cldOrdenInicio" rendered="#{contratosOrdenesComprasController.showFechaOrdenInicio}" />
@@ -84,8 +84,8 @@
                             </p:panelGrid>
 
                             <p:panelGrid columns="2" columnClasses="col2_label,col10"
-                                 style="width: 100%; border:0px none; background-color:transparent;"
-                                 styleClass="form-group ui-panelgrid-blank">
+                                         style="width: 100%; border:0px none; background-color:transparent;"
+                                         styleClass="form-group ui-panelgrid-blank">
                                 <p:outputLabel value="Ciudad de Firma: "  for="txtCiudadFirma"/>
                                 <h:panelGrid columns="2">
                                     <p:inputText id="txtCiudadFirma" size="70" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.ciudadFirma}" 
@@ -135,6 +135,15 @@
                     <p:selectManyCheckbox value="#{contratosOrdenesComprasController.lstSelectDocumentosImp}" layout="responsive" columns="2" >
                         <f:selectItems value="#{contratosOrdenesComprasController.lstDocumentosImp}" />
                     </p:selectManyCheckbox>
+
+                    <p:separator/>
+
+                    <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="2">
+                        <p:outputLabel for="@next" value="Análisis Técnico y Económico: " />
+                        <h:commandLink style="float:right;" action="#{contratosOrdenesComprasController.imprimirAnalisisEconomico}">
+                            <i class="fa fa-download"></i>
+                        </h:commandLink>
+                    </h:panelGrid>
                 </p:panel>
             </div>
         </div>
