--- a/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
@@ -19,7 +19,7 @@
                         <p:menuitem value="Guardar" icon="fa fa-save" action="#{ofertaBienesServiciosController.guardar}" 
                                     disabled="#{menuController.usuarioSoloLectura || ofertaBienesServiciosController.deshabilitar}"
                                     update="tblParticipantes"/>
-                        <p:menuitem value="Imprimir" icon="fa fa-print" ajax="false" action="#{ofertaBienesServiciosController.imprimirAnalisisEconomico}"/>
+                        <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true"/>
                         <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
 
                         <f:facet  name="options">  
