--- a/paquescolar-web/src/main/webapp/app/reg04Modificatoria.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg04Modificatoria.xhtml
@@ -83,7 +83,7 @@
                         <p:outputPanel  id="pnlMsjInfo" style="display:#{(modificatoriaController.msjInformacion.length()>0)?'block':'none'}" styleClass="ui-messages-info">
                             <i class="fa fa-info-circle blue" style="font-size: 12px;">
                                 <p:spacer width="10" height="8"/>
-                                <h:outputText styleClass="ayuda-descripcion" value="#{modificatoriaController.msjInformacion}" escape="false" /> 
+                                <p:outputLabel styleClass="ayuda-descripcion" value="#{modificatoriaController.msjInformacion}" escape="false" /> 
                             </i>
                         </p:outputPanel>
 
